Timeline searching + unit tests