@@ -3,7 +3,6 @@ package net.oliste.timeintervals4j.timeline;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import net.oliste.timeintervals4j.interval.SingleTimeInterval;
 
 public class ComplexTimelineSearch<T> implements TimelineSearch<T, SingleTimeInterval<T>, ComplexTimeline<T>> {
@@ -21,7 +20,7 @@ public class ComplexTimelineSearch<T> implements TimelineSearch<T, SingleTimeInt
 
   @Override
   public List<SingleTimeInterval<T>> findContaining(SingleTimeInterval<T> interval) {
-    return timeline.getIntervals().stream().filter(iv -> iv.contains(interval)).collect(Collectors.toList());
+    return timeline.getIntervals().stream().filter(interval::contains).toList();
   }
 
   @Override
@@ -31,31 +30,68 @@ public class ComplexTimelineSearch<T> implements TimelineSearch<T, SingleTimeInt
 
   @Override
   public Optional<SingleTimeInterval<T>> findLeftNearest(SingleTimeInterval<T> interval) {
+    var intervals = timeline.getIntervals();
+    var it = intervals.listIterator();
+    if (intervals.isEmpty()) {
+      return Optional.empty();
+    }
+
+    if (intervals.getFirst().isAfter(interval)) {
+      return Optional.of(intervals.getFirst());
+    }
+
+    SingleTimeInterval<T> prev = null;
+    while (it.hasNext()) {
+      var iv = it.next();
+      if (!iv.isBefore(interval)) {
+        return prev == null ? Optional.empty() : Optional.of(prev);
+      }
+      prev = iv;
+    }
     return Optional.empty();
   }
 
   @Override
   public Optional<SingleTimeInterval<T>> findRightNearest(SingleTimeInterval<T> interval) {
+    var intervals = timeline.getIntervals();
+    var it = intervals.listIterator();
+    if (intervals.isEmpty()) {
+      return Optional.empty();
+    }
+
+    if (intervals.getLast().isBefore(interval)) {
+      return Optional.of(intervals.getLast());
+    }
+
+    while (it.hasNext()) {
+      var iv = it.next();
+      if (iv.isAfter(interval)) {
+        return Optional.of(iv);
+      }
+    }
     return Optional.empty();
   }
 
   @Override
   public Optional<SingleTimeInterval<T>> findNearest(SingleTimeInterval<T> interval) {
-    return Optional.empty();
+    var optLeft = findLeftNearest(interval);
+    var optRight = findRightNearest(interval);
+
+    if (optLeft.isEmpty()) {
+      return optRight;
+    }
+
+    if (optRight.isEmpty()) {
+      return optLeft;
+    }
+
+    var left = optLeft.get();
+    var right = optRight.get();
+
+    var distLeft = interval.getFrom().toInstant().toEpochMilli() - left.getTo().toInstant().toEpochMilli();
+    var distRight = right.getFrom().toInstant().toEpochMilli() - interval.getTo().toInstant().toEpochMilli();
+
+    return distLeft < distRight ? optLeft : optRight;
   }
 
-  @Override
-  public Optional<SingleTimeInterval<T>> findLeft(SingleTimeInterval<T> interval) {
-    return Optional.empty();
-  }
-
-  @Override
-  public Optional<SingleTimeInterval<T>> findRight(SingleTimeInterval<T> interval) {
-    return Optional.empty();
-  }
-
-  @Override
-  public List<SingleTimeInterval<T>> getGaps(SingleTimeInterval<T> interval) {
-    return null;
-  }
 }
